--- a/css/site.css
+++ b/css/site.css
@@ -112,7 +112,7 @@ you can use the generic selector below, but it's slower:
 a
 {
 	font-weight: bold;
-	color: #46c8f5;
+	color: #007FFF;
 }
 
 .home-container h2
